added merged results

--- a/Clean-Plotting-Task-Performance.ipynb
+++ b/Clean-Plotting-Task-Performance.ipynb
@@ -605,7 +605,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_56088/1305092339.py:72: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24501/1305092339.py:72: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n"
      ]
     },
@@ -1399,33 +1399,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94630986-7b53-4201-a7a6-fa52d5746f81",
+   "cell_type": "markdown",
+   "id": "45b28c9a-b752-486c-b61d-d900c13b7b0e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# PERFORMANCE GAP"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "0c443876-683c-4ba5-b0d0-b4e9737ec7c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5.43 -2.66 -5.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline = bsd[bsd.FeatureType==\"fe\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "we_red = bsd[bsd.FeatureType==\"we\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "wefe_red = bsd[bsd.FeatureType==\"wefe\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "fasttext_red = bsd[bsd.FeatureType==\"fasttext\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "\n",
+    "\n",
+    "we_val = round(100.0*(we_red - baseline)/baseline, 2)\n",
+    "wefe_val = round(100.0*(wefe_red - baseline)/baseline, 2)\n",
+    "fasttext_val = round(100.0*(fasttext_red - baseline)/baseline, 2)\n",
+    "\n",
+    "print(we_val, wefe_val, fasttext_val)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "17a30b81-7202-4cc1-b22a-95892286a519",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8.01 -5.18 -4.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline = tsd[tsd.FeatureType==\"fe\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "we_red = tsd[tsd.FeatureType==\"we\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "wefe_red = tsd[tsd.FeatureType==\"wefe\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "fasttext_red = tsd[tsd.FeatureType==\"fasttext\"][\"WeightedF1Test\"].median()\n",
+    "\n",
+    "\n",
+    "\n",
+    "we_val = round(100.0*(we_red - baseline)/baseline, 2)\n",
+    "wefe_val = round(100.0*(wefe_red - baseline)/baseline, 2)\n",
+    "fasttext_val = round(100.0*(fasttext_red - baseline)/baseline, 2)\n",
+    "\n",
+    "print(we_val, wefe_val, fasttext_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c5eafbcc-8d45-4268-82cb-b9d4fd169565",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.28435734404951163 0.38839842594604723 0.3007739583968192 0.49461770962415463\n",
+      "-42.51 -21.48 -39.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline = clst_data[clst_data.FeatureType==\"fe\"][\"train_v_measure_score\"].median()\n",
+    "\n",
+    "we_red = clst_data[clst_data.FeatureType==\"we\"][\"train_v_measure_score\"].median()\n",
+    "\n",
+    "wefe_red = clst_data[clst_data.FeatureType==\"wefe\"][\"train_v_measure_score\"].median()\n",
+    "\n",
+    "fasttext_red = clst_data[clst_data.FeatureType==\"fasttext\"][\"train_v_measure_score\"].median()\n",
+    "\n",
+    "\n",
+    "print(we_red, wefe_red,fasttext_red, baseline)\n",
+    "we_val = round(100.0*(we_red - baseline)/baseline, 2)\n",
+    "wefe_val = round(100.0*(wefe_red - baseline)/baseline, 2)\n",
+    "fasttext_val = round(100.0*(fasttext_red - baseline)/baseline, 2)\n",
+    "\n",
+    "print(we_val, wefe_val, fasttext_val)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5eafbcc-8d45-4268-82cb-b9d4fd169565",
+   "id": "ed1aa366-ca56-4ed1-bd04-0d2e75d807a1",
    "metadata": {},
    "outputs": [],
    "source": []
