--- a/Clean-Plotting-merged-multilingual.ipynb
+++ b/Clean-Plotting-merged-multilingual.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "e4d25e2c-01e1-450d-9edf-e4e4711e5d54",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "208834cf-9679-4221-8fac-51352503e5b1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "6e643559-f5be-407b-a533-05ff6f34c131",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "9dfd2c55-c122-4c00-8eec-8bf071c3d787",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "203d0d28-52d7-437a-93d6-e3542d0f031b",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "f14b4bbd-abee-444e-958c-7ac011cdcda6",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "ebd8cc34-ba65-4b5c-a1b7-d3493f24b4c8",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "4         0.034314       6.930796e-08    fasttext  2.378241e-09  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "2eda313d-8b0e-4cf7-992e-093001106080",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "b8da8052-8877-43f9-ae9b-e109e278291a",
    "metadata": {},
    "outputs": [
@@ -483,21 +483,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n",
-      "/tmp/ipykernel_92218/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_24576/979093724.py:70: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_yticklabels(ax.get_yticklabels(), fontsize=15)\n"
      ]
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "64112431-106d-4b3e-b590-b8513d0f17d2",
    "metadata": {},
    "outputs": [
@@ -660,12 +660,12 @@
        "      <th></th>\n",
        "      <th>Method</th>\n",
        "      <th>Latency Speedup (Jetson ×)</th>\n",
-       "      <th>Throughput Gain (Jetson ×)</th>\n",
-       "      <th>Energy Reduction (Jetson ×)</th>\n",
-       "      <th>EDP Reduction (Jetson ×)</th>\n",
        "      <th>Latency Speedup (Laptop ×)</th>\n",
+       "      <th>Throughput Gain (Jetson ×)</th>\n",
        "      <th>Throughput Gain (Laptop ×)</th>\n",
+       "      <th>Energy Reduction (Jetson ×)</th>\n",
        "      <th>Energy Reduction (Laptop ×)</th>\n",
+       "      <th>EDP Reduction (Jetson ×)</th>\n",
        "      <th>EDP Reduction (Laptop ×)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -686,36 +686,36 @@
        "      <th>1</th>\n",
        "      <td>we</td>\n",
        "      <td>16.79</td>\n",
+       "      <td>4.90</td>\n",
        "      <td>16.79</td>\n",
+       "      <td>4.90</td>\n",
        "      <td>16.96</td>\n",
-       "      <td>287.25</td>\n",
-       "      <td>4.90</td>\n",
-       "      <td>4.90</td>\n",
        "      <td>6.49</td>\n",
+       "      <td>287.25</td>\n",
        "      <td>31.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>wefe</td>\n",
        "      <td>3.41</td>\n",
+       "      <td>1.44</td>\n",
        "      <td>3.41</td>\n",
+       "      <td>1.44</td>\n",
        "      <td>3.25</td>\n",
-       "      <td>11.03</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>1.44</td>\n",
        "      <td>1.43</td>\n",
+       "      <td>11.03</td>\n",
        "      <td>2.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>fe</td>\n",
        "      <td>0.86</td>\n",
+       "      <td>0.83</td>\n",
        "      <td>0.86</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.68</td>\n",
        "      <td>0.68</td>\n",
        "      <td>0.63</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.68</td>\n",
        "      <td>0.57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -723,32 +723,32 @@
        "</div>"
       ],
       "text/plain": [
-       "     Method  Latency Speedup (Jetson ×)  Throughput Gain (Jetson ×)  \\\n",
+       "     Method  Latency Speedup (Jetson ×)  Latency Speedup (Laptop ×)  \\\n",
        "0  fasttext                        1.00                        1.00   \n",
-       "1        we                       16.79                       16.79   \n",
-       "2      wefe                        3.41                        3.41   \n",
-       "3        fe                        0.86                        0.86   \n",
+       "1        we                       16.79                        4.90   \n",
+       "2      wefe                        3.41                        1.44   \n",
+       "3        fe                        0.86                        0.83   \n",
        "\n",
-       "   Energy Reduction (Jetson ×)  EDP Reduction (Jetson ×)  \\\n",
-       "0                         1.00                      1.00   \n",
-       "1                        16.96                    287.25   \n",
-       "2                         3.25                     11.03   \n",
-       "3                         0.68                      0.63   \n",
-       "\n",
-       "   Latency Speedup (Laptop ×)  Throughput Gain (Laptop ×)  \\\n",
+       "   Throughput Gain (Jetson ×)  Throughput Gain (Laptop ×)  \\\n",
        "0                        1.00                        1.00   \n",
-       "1                        4.90                        4.90   \n",
-       "2                        1.44                        1.44   \n",
-       "3                        0.83                        0.83   \n",
+       "1                       16.79                        4.90   \n",
+       "2                        3.41                        1.44   \n",
+       "3                        0.86                        0.83   \n",
        "\n",
-       "   Energy Reduction (Laptop ×)  EDP Reduction (Laptop ×)  \n",
-       "0                         1.00                      1.00  \n",
-       "1                         6.49                     31.82  \n",
-       "2                         1.43                      2.05  \n",
-       "3                         0.68                      0.57  "
+       "   Energy Reduction (Jetson ×)  Energy Reduction (Laptop ×)  \\\n",
+       "0                         1.00                         1.00   \n",
+       "1                        16.96                         6.49   \n",
+       "2                         3.25                         1.43   \n",
+       "3                         0.68                         0.68   \n",
+       "\n",
+       "   EDP Reduction (Jetson ×)  EDP Reduction (Laptop ×)  \n",
+       "0                      1.00                      1.00  \n",
+       "1                    287.25                     31.82  \n",
+       "2                     11.03                      2.05  \n",
+       "3                      0.63                      0.57  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,22 +801,31 @@
     "    return relative\n",
     "\n",
     "# ---------------------------\n",
-    "# Build merged table with subcolumns for devices\n",
+    "# Build merged table with interleaved subcolumns\n",
     "# ---------------------------\n",
     "rows = []\n",
+    "metrics_order = [\n",
+    "    (\"speedup_latency\", \"Latency Speedup\"),\n",
+    "    (\"throughput_gain\", \"Throughput Gain\"),\n",
+    "    (\"energy_reduction\", \"Energy Reduction\"),\n",
+    "    (\"EDP_reduction\", \"EDP Reduction\"),\n",
+    "]\n",
+    "\n",
     "for method in FEATURES:\n",
     "    row = {\"Method\": method}\n",
-    "    for device_name, df in DEVICES.items():\n",
-    "        rel = compute_relative_metrics(df, baseline=BASELINE, n_class=TASK_CLASS)\n",
-    "        row[f\"Latency Speedup ({device_name} ×)\"] = rel[method][\"speedup_latency\"]\n",
-    "        row[f\"Throughput Gain ({device_name} ×)\"] = rel[method][\"throughput_gain\"]\n",
-    "        row[f\"Energy Reduction ({device_name} ×)\"] = rel[method][\"energy_reduction\"]\n",
-    "        row[f\"EDP Reduction ({device_name} ×)\"] = rel[method][\"EDP_reduction\"]\n",
+    "    # Compute per-device metrics first\n",
+    "    rels = {device_name: compute_relative_metrics(df, baseline=BASELINE, n_class=TASK_CLASS)[method]\n",
+    "            for device_name, df in DEVICES.items()}\n",
+    "    \n",
+    "    # Interleave device values per metric\n",
+    "    for metric_key, metric_label in metrics_order:\n",
+    "        for device_name in DEVICES.keys():\n",
+    "            row[f\"{metric_label} ({device_name} ×)\"] = rels[device_name][metric_key]\n",
     "    rows.append(row)\n",
     "\n",
     "rel_table = pd.DataFrame(rows)\n",
     "rel_table = rel_table.round(2)\n",
-    "rel_table"
+    "rel_table\n"
    ]
   },
   {
